--- a/Sobre-Fluter/contapessoasrestaurante/pubspec.yaml
+++ b/Sobre-Fluter/contapessoasrestaurante/pubspec.yaml
@@ -47,7 +47,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  #   - images/a_dot_ham.
+  assets:
+    - images/restaurant.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
